fixes css scroll issue w/ z-index on nav.

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -10,6 +10,7 @@ nav {
     padding-left: 2em;
     background-color: #00A087;
     color: #e8fdff;
+    z-index: 1;
 }
 
 #nav-bar .logo {
